Basic upload and download of bundle complete.
